<resources>
    <string name="app_name">SppPay</string>
    <string name="title_activity_main_siswa">MainActivitySiswa</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profil</string>
    <string name="riwayat_pembayaran">Riwayat Pembayaran</string>
    <string name="data_diri_lengkap_anda">Data Diri Lengkap Anda</string>
    <string name="alamat">Alamat :</string>
    <string name="nisn">NISN :</string>
    <string name="kelas">Kelas :</string>

    <string name="riwayat">Riwayat</string>
    <string name="laporan">Laporan</string>
    <string name="bayar_spp">Bayar SPP</string>
    <string name="title_activity_main_admin">MainActivityAdmin</string>
    <string name="data_siswa">Data Siswa</string>
    <string name="data_petugas">Data Petugas</string>
    <string name="data_kelas">Data Kelas</string>
    <string name="data_spp">Data SPP</string>
    <string name="kelola_data">KELOLA DATA</string>

    <string-array name="role_petugas">
        <item>petugas</item>
        <item>admin</item>
    </string-array>

    <string-array name="bulan_bayar">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
</resources>
