<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home_admin"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_riwayat_admin"
        android:icon="@drawable/ic_history"
        android:title="@string/riwayat" />

    <item
        android:id="@+id/navigation_laporan_admin"
        android:icon="@drawable/ic_report"
        android:title="@string/laporan" />

    <item
        android:id="@+id/navigation_bayar_admin"
        android:icon="@drawable/ic_bayar2"
        android:title="@string/bayar_spp" />

    <item
        android:id="@+id/navigation_profile_admin"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />

</menu>